syntax = "proto3";
package racing;

option go_package = "/racing";

import "google/protobuf/timestamp.proto";

service Racing {
  // ListRaces will return a collection of all races.
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse) {}
}

/* Requests/Responses */

message ListRacesRequest {
  ListRacesRequestFilter filter = 1;
}

// Response to ListRaces call.
message ListRacesResponse {
  repeated Race races = 1;
}

// Filter for listing races.
message ListRacesRequestFilter {
  repeated int64 meeting_ids = 1;
  RaceVisibleStatus visible_status = 2;
  SortByField sort_by = 3;
}

/* Resources */

// A race resource.
message Race {
  // ID represents a unique identifier for the race.
  int64 id = 1;
  // MeetingID represents a unique identifier for the races meeting.
  int64 meeting_id = 2;
  // Name is the official name given to the race.
  string name = 3;
  // Number represents the number of the race.
  int64 number = 4;
  // Visible represents whether or not the race is visible.
  bool visible = 5;
  // AdvertisedStartTime is the time the race is advertised to run.
  google.protobuf.Timestamp advertised_start_time = 6;
}

enum RaceVisibleStatus {
  RACE_VISIBLE_STATUS_UNSPECIFIED = 0;
  RACE_VISIBLE_STATUS_ALL = 1;
  RACE_VISIBLE_STATUS_VISIBLE = 2;
  RACE_VISIBLE_STATUS_INVISIBLE = 3;
}

enum SortByField {
  SORT_BY_FIELD_UNSPECIFIED = 0;
  SORT_BY_FIELD_ID = 1;
  SORT_BY_FIELD_MEETING_ID = 2;
  SORT_BY_FIELD_NAME = 3;
  SORT_BY_FIELD_NUMBER = 4;
  SORT_BY_FIELD_VISIBLE = 5;
  SORT_BY_FIELD_TIME = 6;
}
